Done some question of Set

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -4013,7 +4013,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -4027,10 +4027,8 @@
       "source": [
         "# Approach - formula for n level = (n +1)* n/2\n",
         "\n",
-        "import math\n",
-        "\n",
         "def get_triangular_number(level: int) -> int:\n",
-        "    return math.floor(level * (level + 1)/2)\n",
+        "    return (level * (level + 1))//2\n",
         "\n",
         "# Take a input of number\n",
         "n = int(input('Enter the number of elements: '))\n",
@@ -4051,7 +4049,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -4064,21 +4062,28 @@
         }
       ],
       "source": [
-        "# Approach - We can use list comprehension and all function to achieve this\n",
-        "# Explanation - Actually we will check if for all the items in subsequence list exists in master list\n",
-        "#          so for each element in subsequence list we see if x in master list and output of this is bool list\n",
-        "#          all the elements of the above list should be true then it means subsequence is contained in master list \n",
+        "# Approach - We will iterate from 0 to x where x = length of master list - legth of subsequence\n",
+        "# Explanation - Actually we will check if for all the items in subsequence list exists in master list in same order\n",
+        "# if slice from current position till length of subsequence matchs then True\n",
         "\n",
         "\n",
         "# Function definition - It takes master list and a subsequence list and return True if subsequence list is contained in master list else False\n",
         "def is_list_subsequence(master_list: list, list_candidate_of_subsequence: list) -> bool:\n",
-        "    element_contained_list = [el in  master_list for el in list_candidate_of_subsequence]\n",
-        "    # Below statement will check if all the elements of the list are True or not\n",
-        "    return all(element_contained_list)\n",
+        "    master_length = len(master_list)\n",
+        "    subsequence_length = len(list_candidate_of_subsequence)\n",
+        "\n",
+        "    # Shorter maste list can not contain sequence list\n",
+        "    if(master_length < subsequence_length):\n",
+        "        return False\n",
+        "\n",
+        "    for i in range(len(master_list) - subsequence_length + 1):\n",
+        "        if master_list[i:i+subsequence_length] == list_candidate_of_subsequence:\n",
+        "            return True\n",
+        "    return False\n",
         "\n",
         "# Create lists\n",
         "list_1 = [1,2,3,4,5,6,7,8,9,10,11,12,14]\n",
-        "list_2 = [3,6,12,14]\n",
+        "list_2 = [3,4,5,6,7]\n",
         "list_3 = [3,6,12,14, 15]\n",
         "\n",
         "# Check if list_2 is subsequence of list_1\n",
@@ -5731,16 +5736,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 1024)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - takes number 'num' and return the tuple of n power of 2 - 2**n -- for each element where n is its index\n",
+        "def create_tuple_of_n_power_2(num_of_elements: int) -> list:\n",
+        "    return tuple(2**num for num in range(num_of_elements))\n",
+        "\n",
+        "# Take input from user\n",
+        "num_of_elements = int(input('Enter number of elements in the tuple: '))\n",
+        "\n",
+        "# Compute tuple\n",
+        "result = create_tuple_of_n_power_2(num_of_elements)\n",
+        "\n",
+        "# Print result\n",
+        "print(result)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 46. Find the longest string in a tuple of strings."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This is a longest string in this tuple for sure.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach -  Using max funtion\n",
+        "\n",
+        "# Create tuple of strings\n",
+        "tuple_of_strings = ('Hi smallest i am', 'Hello this is a string', 'This is a longest string in this tuple for sure.', 'Good morning, how r u?')\n",
+        "\n",
+        "# Get longest string\n",
+        "longest_string = max(tuple_of_strings, key=len)\n",
+        "\n",
+        "# Print result\n",
+        "print(longest_string)"
       ]
     },
     {
@@ -5751,10 +5803,65 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hi smallest i am\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach -  Using min funtion\n",
+        "\n",
+        "# Create tuple of strings\n",
+        "tuple_of_strings = ('Hi smallest i am', 'Hello this is a string', 'This is a longest string in this tuple for sure.', 'Good morning, how r u?')\n",
+        "\n",
+        "# Get shortest string\n",
+        "shortest_string = min(tuple_of_strings, key=len)\n",
+        "\n",
+        "# Print result\n",
+        "print(shortest_string)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 48. Create a tuple of the first `n` triangular numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(1, 3, 6, 10, 15, 21, 28, 36, 45, 55, 66, 78, 91, 105, 120)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - formula for n level = (n +1)* n/2\n",
+        "\n",
+        "def get_triangular_number(level: int) -> int:\n",
+        "    return (level * (level + 1))//2\n",
+        "\n",
+        "# Take a input of number\n",
+        "n = int(input('Enter the number of elements: '))\n",
+        "\n",
+        "# Create tuple of triangular numbers\n",
+        "triangular_numbers = tuple(get_triangular_number(num) for num in range(1, n +1))\n",
+        "\n",
+        "# Print result\n",
+        "print(triangular_numbers)"
       ]
     },
     {
@@ -5765,10 +5872,85 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tuple 2 is subsequence of Tuple 1: True\n",
+            "Tuple 3 is subsequence of Tuple 1: False\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - We will iterate from 0 to x where x = length of master tuple - length of subsequence\n",
+        "# Explanation - Actually we will check if for all the items in subsequence tuple exists in master tuple in same order\n",
+        "# if slice from current position till length of subsequence matchs then True\n",
+        "\n",
+        "\n",
+        "# Function definition - It takes master tuple and a subsequence tuple and return True if subsequence tuple is contained in master tuple else False\n",
+        "def is_tuple_subsequence(master_tuple: tuple, tuple_candidate_of_subsequence: tuple) -> bool:\n",
+        "    master_length = len(master_tuple)\n",
+        "    subsequence_length = len(tuple_candidate_of_subsequence)\n",
+        "\n",
+        "    # Shorter master tuple can not contain sequence tuple of greater length\n",
+        "    if(master_length < subsequence_length):\n",
+        "        return False\n",
+        "\n",
+        "    for i in range(master_length - subsequence_length + 1):\n",
+        "        if master_tuple[i:i+subsequence_length] == tuple_candidate_of_subsequence:\n",
+        "            return True\n",
+        "    return False\n",
+        "\n",
+        "# Create Tuples\n",
+        "tuple_1 = (1,2,3,4,5,6,7,8,9,10,11,12,14)\n",
+        "tuple_2 = (3,4,5,6,7)\n",
+        "tuple_3 = (3,6,12,14, 15)\n",
+        "\n",
+        "# Check if tuple_2 is subsequence of tuple_1\n",
+        "is_list2_subsequence = is_tuple_subsequence(tuple_1, tuple_2)\n",
+        "# Check if tuple_3 is subsequence of tuple_1\n",
+        "is_list3_subsequence = is_tuple_subsequence(tuple_1, tuple_3)\n",
+        "\n",
+        "# Print result\n",
+        "print(f'Tuple 2 is subsequence of Tuple 1: {is_list2_subsequence}')\n",
+        "print(f'Tuple 3 is subsequence of Tuple 1: {is_list3_subsequence}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 50. Create a tuple of alternating 1s and 0s of length `n`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(0, 1, 0, 1, 0, 1, 0, 1, 0, 1)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - We will use remainder when divided by 2 for each index like this we will have alternatine 0 and 1\n",
+        "\n",
+        "# Get input from user for n (number of elements)\n",
+        "n = int(input('Enter number of elements for tuple: '))\n",
+        "\n",
+        "# Create tuple\n",
+        "alternating_tuple = tuple(num % 2 for num in range(0, n))\n",
+        "\n",
+        "# Print result\n",
+        "print(alternating_tuple)"
       ]
     },
     {
@@ -5781,7 +5963,211 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "### 1. Create a set with integers from 1 to 5."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 3, 4, 5}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set with integers from 1 to 5\n",
+        "set_of_ints = { 1, 2, 3, 4, 5}\n",
+        "\n",
+        "# print set\n",
+        "print(set_of_ints)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Add an element to a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 48,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set before add:  {1, 2, 3, 4, 5}\n",
+            "Set after add:  {1, 2, 3, 4, 5, 51}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set\n",
+        "set_of_ints = { 1, 2, 3, 4, 5}\n",
+        "\n",
+        "# Print set\n",
+        "print('Set before add: ', set_of_ints)\n",
+        "\n",
+        "# Add an element, let us add element 51\n",
+        "set_of_ints.add(51)\n",
+        "\n",
+        "# Print set\n",
+        "print('Set after add: ', set_of_ints)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Remove an element from a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set before remove:  {1, 2, 3, 4, 5}\n",
+            "Set after remove:  {1, 2, 4, 5}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set\n",
+        "set_of_ints = { 1, 2, 3, 4, 5}\n",
+        "\n",
+        "# Print set\n",
+        "print('Set before remove: ', set_of_ints)\n",
+        "\n",
+        "# Remove an element, let us remove element 3\n",
+        "set_of_ints.remove(3)\n",
+        "\n",
+        "# Print set\n",
+        "print('Set after remove: ', set_of_ints)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Check if an element exists in a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elements exists in set\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set\n",
+        "set_1 = {10, 23, 15, 66, 67, 80, 345}\n",
+        "\n",
+        "# Element to find\n",
+        "element_to_find = 15\n",
+        "\n",
+        "# Check if elements exists or not\n",
+        "if element_to_find in set_1:\n",
+        "  print(f'Elements exists in set')\n",
+        "else:\n",
+        "  print('Elements does not exist in set.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. Find the length of a set without using the `len()` function.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6. Clear all elements from a set."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 7. Create a set of even numbers from 1 to 10."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 8. Create a set of odd numbers from 1 to 10.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 9. Find the union of two sets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 10. Find the intersection of two sets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 11. Find the difference between two sets."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 12. Check if a set is a subset of another set."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 13. Check if a set is a superset of another set."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 14. Create a set from a list."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 15. Convert a set to a list."
+      ]
     }
   ],
   "metadata": {
