--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -79,8 +79,11 @@
         }
       ],
       "source": [
+        "# Approach - String is called Palindrome when reverse of string and string both are equal\n",
+        "\n",
         "# Creating a function to return True if Palindrome, else False\n",
         "def is_palindrome(string_to_check:str) -> bool:\n",
+        "  string_to_check = string_to_check.lower()\n",
         "  reverse_of_string = string_to_check[::-1]\n",
         "  return reverse_of_string == string_to_check\n",
         "\n",
@@ -6010,7 +6013,7 @@
         }
       ],
       "source": [
-        "# Create a set\n",
+        "# Create a set (in case we need empty set then use set() )\n",
         "set_of_ints = { 1, 2, 3, 4, 5}\n",
         "\n",
         "# Print set\n",
@@ -6100,10 +6103,71 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Length of set is: 10\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach iterate on set items and increment counter variable\n",
+        "\n",
+        "# Function with code of finding length\n",
+        "def length(set_inpt) -> int:\n",
+        "  count = 0\n",
+        "  for el in set_inpt:\n",
+        "    count += 1\n",
+        "  return count\n",
+        "\n",
+        "# Create a tuple\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+        "\n",
+        "# Get length using our function\n",
+        "length_of_set = length(set_1)\n",
+        "\n",
+        "# Print output\n",
+        "print(f'Length of set is: {length_of_set}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 6. Clear all elements from a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set before clear:  {1, 99, 67, 100, 23, 89, 45}\n",
+            "Set after clear:  set()\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set\n",
+        "set_1 = {1, 23, 45, 67, 89, 99, 100}\n",
+        "\n",
+        "# Print a set before clear\n",
+        "print('Set before clear: ', set_1)\n",
+        "\n",
+        "# Clear all elements\n",
+        "set_1.clear()\n",
+        "\n",
+        "# Print a set before clear\n",
+        "print('Set after clear: ', set_1)"
       ]
     },
     {
@@ -6114,10 +6178,70 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, 4, 6, 8, 10}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - takes a range and return set of even numbers between range\n",
+        "def create_set_of_even_numbers(range_of_set: range) -> set:\n",
+        "    result_set = set()\n",
+        "    for num in range_of_set:\n",
+        "        if num % 2 == 0:\n",
+        "            result_set.add(num)\n",
+        "    \n",
+        "    return result_set\n",
+        "\n",
+        "# Create a set from 1 to 10 (range 1 - 11)\n",
+        "set_of_evens = create_set_of_even_numbers(range(1,11))\n",
+        "\n",
+        "# print result\n",
+        "print(set_of_evens)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 8. Create a set of odd numbers from 1 to 10.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 3, 5, 7, 9}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - takes a range and return set of odd numbers between range\n",
+        "def create_set_of_odd_numbers(range_of_set: range) -> set:\n",
+        "    result_set = set()\n",
+        "    for num in range_of_set:\n",
+        "        if num % 2 != 0:\n",
+        "            result_set.add(num)\n",
+        "    \n",
+        "    return result_set\n",
+        "\n",
+        "# Create a set from 1 to 10 (range 1 - 11)\n",
+        "set_of_odds = create_set_of_odd_numbers(range(1,11))\n",
+        "\n",
+        "# print result\n",
+        "print(set_of_odds)"
       ]
     },
     {
@@ -6128,10 +6252,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9, 12}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function union\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get union of set_1 and set_2\n",
+        "union_of_sets = set_1.union(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "print(union_of_sets)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 10. Find the intersection of two sets."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{3, 6}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function intersection\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get intersection of set_1 and set_2\n",
+        "intersection_of_sets = set_1.intersection(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "print(intersection_of_sets)"
       ]
     },
     {
@@ -6142,10 +6320,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 4, 5, 7, 8}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function difference\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get difference of set_1 and set_2\n",
+        "difference_of_sets = set_1.difference(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "print(difference_of_sets)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 12. Check if a set is a subset of another set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set 1 is subset of set 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function issubset\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 20}\n",
+        "\n",
+        "# Get issubset of set_1 and set_2\n",
+        "is_subset_of_set_2 = set_1.issubset(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "if is_subset_of_set_2:\n",
+        "    print('Set 1 is subset of set 2')\n",
+        "else:\n",
+        "    print('Set 1 is not a subset of set 2')"
       ]
     },
     {
@@ -6156,10 +6391,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set 1 is superset of set 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function issuperset\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {2, 3}\n",
+        "\n",
+        "# Get issuperset of set_1 and set_2\n",
+        "is_superset_of_set_2 = set_1.issuperset(set_2)\n",
+        "\n",
+        "# Print result\n",
+        "if is_superset_of_set_2:\n",
+        "    print('Set 1 is superset of set 2')\n",
+        "else:\n",
+        "    print('Set 1 is not a superset of set 2')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 14. Create a set from a list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a list from which we wil create a set\n",
+        "list_1 = [1, 2, 3, 4, 5, 6, 4, 7, 5, 8, 9]\n",
+        "\n",
+        "# Create a set from list\n",
+        "set_from_list = set(list_1)\n",
+        "\n",
+        "# Print set\n",
+        "print(set_from_list)"
       ]
     },
     {
@@ -6170,10 +6459,67 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a set from which we wil create a list\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 4, 7, 5, 8, 9}\n",
+        "\n",
+        "# Create a list frm set\n",
+        "list_from_set  = list(set_1)\n",
+        "\n",
+        "# Print list\n",
+        "print(list_from_set)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 16. Remove a random element from a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set after removal of 25 is {1, 99, 13, 46, 14, 51, 21, 87, 24, 26}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Aproach - will try to choose from elements in the set by using random.choice\n",
+        " \n",
+        "# import module\n",
+        "import random\n",
+        "\n",
+        "# create a set\n",
+        "set_1 = {1, 21, 13, 14, 25, 24, 26, 46, 87, 99, 51}\n",
+        "\n",
+        "# Get random element to be removed\n",
+        "# Direct set is not supported because set does not support get element directly\n",
+        "element_to_remove = random.choice(list(set_1))\n",
+        "\n",
+        "# Remove element from set\n",
+        "set_1.remove(element_to_remove)\n",
+        "\n",
+        "# Print result set\n",
+        "print(f'Set after removal of {element_to_remove} is {set_1}')"
       ]
     },
     {
@@ -6184,10 +6530,64 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Popped element 1 now set is {99, 13, 46, 14, 51, 21, 87, 24, 25, 26}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# create a set\n",
+        "set_1 = {1, 21, 13, 14, 25, 24, 26, 46, 87, 99, 51}\n",
+        "\n",
+        "# Pop the element\n",
+        "element_popped_from_set = set_1.pop()\n",
+        "\n",
+        "# Print\n",
+        "print(f'Popped element {element_popped_from_set} now set is {set_1}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 18. Check if two sets have no elements in common."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sets have common elements that are : {3, 6}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - use in build function intersection\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get intersection of set_1 and set_2\n",
+        "intersection_of_sets = set_1.intersection(set_2)\n",
+        "\n",
+        "# Check if intersection is empty or not\n",
+        "if not intersection_of_sets:\n",
+        "    print('Sets do not have common elements.')\n",
+        "else:\n",
+        "    print('Sets have common elements that are :', intersection_of_sets)"
       ]
     },
     {
@@ -6196,6 +6596,13 @@
       "source": [
         "### 19. Find the symmetric difference between two sets."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
