Questions till 32 from set are done

--- a/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
+++ b/DayWiseMaterial/Assignments/20th_Aug_Python_Basics_Practice_Test_Assignment.ipynb
@@ -6599,16 +6599,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 4, 5, 7, 8, 9, 12}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - symmetric difference in sets is set1^set2\n",
+        "# Symmetric difference is difference from both sets (uncommons elements from both sets)\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Get symmetric diff of set_1 and set_2\n",
+        "sym_difference = set_1 ^ set_2\n",
+        "\n",
+        "# Check Symmetric difference\n",
+        "print(sym_difference)"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 20. Update a set with elements from another set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 2, 3, 4, 5, 6, 7, 8, 9, 12}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 6, 9, 12}\n",
+        "\n",
+        "# Update set 1 with set 2 elements\n",
+        "set_1.update(set_2)\n",
+        "\n",
+        "# Print set_1\n",
+        "print(set_1)"
       ]
     },
     {
@@ -6619,10 +6665,86 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set of the first 5 prime numbers:  {2, 3, 5, 7, 11}\n"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "# Function to check if number is prime or not\n",
+        "# will try to divide a number from 2 to (n/2)+1 - (to optimize the function) - if number is divisible by any number then False\n",
+        "def is_prime_number(n:int) -> bool:\n",
+        "    if(n <= 1):\n",
+        "        return False\n",
+        "    range_num = math.floor(n/2) + 1\n",
+        "    for i in range(2 , range_num):\n",
+        "        if(n%i == 0):\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "# Funtion  - take count of elements and return set of prime number with same count\n",
+        "def create_set_of_prime_numbers(number_of_elements: int) -> set:\n",
+        "    result_set = set()\n",
+        "\n",
+        "    # Prime numbers starts with 2\n",
+        "    number = 2\n",
+        "    while len(result_set) < number_of_elements:\n",
+        "        if is_prime_number(number):\n",
+        "            # Is prime nmber then add to set\n",
+        "            result_set.add(number)\n",
+        "\n",
+        "        number += 1\n",
+        "    \n",
+        "    return result_set\n",
+        "\n",
+        "# Create set of prime numbers\n",
+        "set_of_primes = create_set_of_prime_numbers(5)\n",
+        "\n",
+        "# print\n",
+        "print('Set of the first 5 prime numbers: ', set_of_primes)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 22. Check if two sets are identical."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sets are identical\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create sets\n",
+        "set_1 = {1, 2, 3, 4, 5, 6, 7, 8}\n",
+        "set_2 = {3, 1, 2, 6, 7, 8, 4, 5}\n",
+        "\n",
+        "# Compare sets\n",
+        "are_identical = set_1 == set_2\n",
+        "\n",
+        "# Print\n",
+        "if are_identical:\n",
+        "    print('Sets are identical')\n",
+        "else:\n",
+        "    print('Sets are not identical')"
       ]
     },
     {
@@ -6633,10 +6755,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Frozen set create from list:  frozenset({1, 4, 5, 23})\n",
+            "Frozen set create from tuple:  frozenset({4, 5, 6, 7, 8})\n",
+            "Frozen set create from set:  frozenset({2, 3, 4, 5, 9})\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create list, tuple, set\n",
+        "list_1 = [1,23,4,5]\n",
+        "tple = (4,5,6,7,8)\n",
+        "set_1 = {4,5,3,2,9}\n",
+        "\n",
+        "# Frozen sets from above colections\n",
+        "frozen_set_from_list = frozenset(list_1)\n",
+        "frozen_set_from_tuple = frozenset(tple)\n",
+        "frozen_set_from_set = frozenset(set_1)\n",
+        "\n",
+        "# Prints\n",
+        "print('Frozen set create from list: ', frozen_set_from_list)\n",
+        "print('Frozen set create from tuple: ', frozen_set_from_tuple)\n",
+        "print('Frozen set create from set: ', frozen_set_from_set)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 24. Check if a set is disjoint with another set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sets are disjoint\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Disjiont sets are sets which have distinct elements (not common)\n",
+        "\n",
+        "# Create sets\n",
+        "set_1 = {3,4,5,6,7,8}\n",
+        "set_2 = {1,9,10,11}\n",
+        "\n",
+        "# Check if sets are disjoint\n",
+        "are_disjoint = set_1.isdisjoint(set_2)\n",
+        "\n",
+        "# Print\n",
+        "if are_disjoint:\n",
+        "    print('Sets are disjoint')\n",
+        "else:\n",
+        "    print('Sets are not disjoint')"
       ]
     },
     {
@@ -6647,10 +6831,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{1, 4, 9, 16, 25}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create an empty set\n",
+        "set_of_squares = set()\n",
+        "\n",
+        "# Add squares from 1 to 5 in set\n",
+        "for num in range(1, 6):\n",
+        "    # Add square of num to set\n",
+        "    set_of_squares.add(num ** 2)\n",
+        "\n",
+        "# Print\n",
+        "print(set_of_squares)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 26. Filter out all even numbers from a set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, 102, 44, 54, 56, 92}\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "# Function - takes a set of numbers as input and return set of even numbers from set\n",
+        "def get_even_numbers_from_set(set_inpt: set) -> set:\n",
+        "    even_numbers_set = set()\n",
+        "    \n",
+        "    for num in set_inpt:\n",
+        "        if num % 2 == 0:\n",
+        "            even_numbers_set.add(num)\n",
+        "    \n",
+        "    return even_numbers_set\n",
+        "\n",
+        "\n",
+        "# Create a set to get even numbers from\n",
+        "set_1 = {2, 3, 44, 54, 56, 77, 75, 87, 92, 102}\n",
+        "\n",
+        "# Get even numbers from set\n",
+        "set_of_evens = get_even_numbers_from_set(set_1)\n",
+        "\n",
+        "# Print\n",
+        "print(set_of_evens)"
       ]
     },
     {
@@ -6661,10 +6907,77 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{4, 6, 8, 12, 44, 110, 14}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Function - take a set as parameter and return set with all elements doubled\n",
+        "def doubled_elements(set_inpt: set) -> set:\n",
+        "    doubled_set = set()\n",
+        "\n",
+        "    for num in set_inpt:\n",
+        "        doubled_set.add(num*2)\n",
+        "    \n",
+        "    return doubled_set\n",
+        "\n",
+        "\n",
+        "# Create a set\n",
+        "set_1 = {2, 3, 4, 22, 55, 6, 7,}\n",
+        "\n",
+        "# Get set with all elements doubled\n",
+        "set_of_doubled_elements = doubled_elements(set_1)\n",
+        "\n",
+        "# print\n",
+        "print(set_of_doubled_elements)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 28. Create a set of random numbers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{450, 164, 234, 303, 54}\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "\n",
+        "# Function - takes a number of elements as parameter 'n' and returns set of random 'n' elements \n",
+        "def generate_set_of_random(n: int) -> set:\n",
+        "    random_set = set()\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        random_set.add(random.randint(0, 500))\n",
+        "    \n",
+        "    return random_set\n",
+        "\n",
+        "\n",
+        "# Create a set of random elements\n",
+        "set_of_random = generate_set_of_random(5)\n",
+        "\n",
+        "# Print\n",
+        "print(set_of_random)"
       ]
     },
     {
@@ -6675,10 +6988,61 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Set is empty\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Approach - we can use 'not' keyword to check if set is empty -- alernatively len fnction can also be used\n",
+        "\n",
+        "# Create a set\n",
+        "set_1 = set()\n",
+        "\n",
+        "if not set_1:\n",
+        "    print('Set is empty')\n",
+        "else:\n",
+        "    print('Set is not empty')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 30. Create a nested set (hint: use frozenset)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{frozenset({4, 5, 6, 7, 8}), frozenset({1, 2, 3, 4, 5, 6})}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create sets\n",
+        "set_1 = {1,2,3,4,5,6}\n",
+        "set_2 = {4,5,6,7,8}\n",
+        "\n",
+        "# Since sets are unhashable type, directly using set inside set raise -- unhashable type: 'set'\n",
+        "# Create nested set - using frozenset\n",
+        "nested_set = {frozenset(set_1), frozenset(set_2)}\n",
+        "\n",
+        "# Print\n",
+        "print(nested_set)"
       ]
     },
     {
@@ -6689,11 +7053,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, 3, 4, 6, 7, 8, 9}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create set\n",
+        "set_1 = {2, 3, 4, 5, 6, 7, 8, 9}\n",
+        "\n",
+        "# Discard an element - let us discard 5\n",
+        "set_1.discard(5)\n",
+        "\n",
+        "# Print set\n",
+        "print(set_1)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 32. Compare two sets."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -6703,11 +7098,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 34. Convert a set of strings to a set of integers."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
